FR Translation for PM group send

--- a/translations/soul+intl-icu.fr.xlf
+++ b/translations/soul+intl-icu.fr.xlf
@@ -4183,7 +4183,7 @@
       </notes>
       <segment>
         <source>Absender wählen</source>
-        <target>Absender wählen</target>
+        <target>Envoyer en tant que</target>
       </segment>
     </unit>
     <unit id="X_Adc53">
