Fixed EN Translation for gazette (attack)

--- a/translations/game+intl-icu.en.xlf
+++ b/translations/game+intl-icu.en.xlf
@@ -23215,7 +23215,7 @@
       </notes>
       <segment>
         <source>Wie aus dem Nichts stand die Meute auf einmal vor dem Stadttor...</source>
-        <target>As if out of nowhere, the horde suddenly stood in front of the city gate...</target>
+        <target>All of a sudden, the source of our nightmares began to gather in front of the town gates...</target>
       </segment>
     </unit>
     <unit id="bAX7fz8">
